start cpp stuff

--- a/Computational_Mathematics_1/python/testing.ipynb
+++ b/Computational_Mathematics_1/python/testing.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[4. 0. 0.]\n",
-      " [0. 4. 0.]\n",
-      " [0. 0. 4.]]\n",
-      "[[4. 0. 0.]\n",
-      " [0. 4. 0.]\n",
-      " [0. 0. 4.]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[4., 0., 0.],\n",
+       "       [0., 4., 0.],\n",
+       "       [0., 0., 4.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -28,8 +28,10 @@
     "p = Polynomial(c)\n",
     "\n",
     "x = np.eye(3)\n",
-    "print(p(x))\n",
-    "print(2*x + x + x**2)\n",
+    "p(x)\n",
+    "\n",
+    "# x = np.linspace(-1, 1, 500)\n",
+    "# y = p(x)\n",
     "# plt.plot(x, y, label=p.latex_string())\n",
     "# plt.legend()\n",
     "# plt.show()"
