--- a/Computational_Mathematics_1/ex_7/5_gauss/7_5_3.ipynb
+++ b/Computational_Mathematics_1/ex_7/5_gauss/7_5_3.ipynb
@@ -2,39 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[4., 0., 0.],\n",
-       "       [0., 4., 0.],\n",
-       "       [0., 0., 4.]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "317.264151733829\n"
+     ]
     }
    ],
    "source": [
-    "from polynomial import Polynomial\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "c = [2.0, 1.0, 1.0]\n",
-    "p = Polynomial(c)\n",
+    "from gauss import GaussLegendre\n",
     "\n",
-    "x = np.eye(3)\n",
-    "p(x)\n",
+    "GL = GaussLegendre(3)\n",
     "\n",
-    "# x = np.linspace(-1, 1, 500)\n",
-    "# y = p(x)\n",
-    "# plt.plot(x, y, label=p.latex_string())\n",
-    "# plt.legend()\n",
-    "# plt.show()"
+    "f = lambda x : x**6 - x**2 * np.sin(2*x)\n",
+    "\n",
+    "\n",
+    "print(GL.integrate(f, 1, 3))\n"
    ]
   }
  ],
