--- a/hue/dev.ipynb
+++ b/hue/dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -160,21 +160,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "()"
+       "16099768"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "cols._top_left.as_number()"
+   ]
   }
  ],
  "metadata": {
